fixed overflow issue on user index page

--- a/app/assets/stylesheets/components/user/index.css
+++ b/app/assets/stylesheets/components/user/index.css
@@ -5,18 +5,19 @@
   top:37px;
   background-color: lightgoldenrodyellow;
   box-sizing: border-box;
+  overflow-y: hidden;
 }
 
 .user-index-header{
   height: 66px;
-  top: 39px;
+  top: 37px;
   display:flex;
   align-items: center;
   justify-content: space-between;
   background-color: lightgoldenrodyellow;
   box-sizing: border-box;
   border-bottom: 1px solid lightblue;
-  width: 100%;
+  width: calc(100vw - 300px);
 }
 
 .user-index-header button{
@@ -45,13 +46,14 @@
 
 
 .user-index-body{
-  position: fixed;
-  left: 300px;
+  position:relative;
+  display: flex;
   height: calc(100vh - 37px - 66px);
-  top: 103px;
   box-sizing: border-box;
   background-color: lightgoldenrodyellow;
   width: 100%;
+  overflow-y: scroll;
+
 }
 
 
@@ -72,10 +74,11 @@
 .user-index-list{
   width: 100%;
   height: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  position: absolute;
   display: flex;
   flex-flow: row wrap;
-  padding: 10px;
-  position: absolute;
 }
 
 .user-index li{
